css/main.css
/* ... */
/* gui modals */
.kbs-modal {
    position: fixed;
    top: 54%; left: 50%;
    width: 600px; height: 400px;
    margin-left: -300px;
    margin-top: -200px;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
    text-align: center;
    z-index: 2147483647;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

.kbs-modal.kbs-stacked {
    top: 150px;
    -webkit-transform: scale(0.5);
    -moz-transform: scale(0.5);
    -o-transform: scale(0.5);
    transform: scale(0.5);
    opacity: 0.5;
}

.kbs-modal-title {
    float: left;
    width: 100%; height: 40px;
    margin: 0;
    padding: 5px;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.9);
    font-size: 20px;
    text-align: left;
}

.kbs-modal-closed {
    position: absolute;
    top: -20px; right: -20px;
    width: 34px; height: 34px;
    margin: 0; padding: 0;
    border: solid transparent 0px;
    border-radius: 100%;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.9);
    font-size: 18px;
    line-height: 1.7em;
    text-align: center;
    cursor: pointer;

    -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s, border-radius 0.3s;
    -moz-transition: background-color 0.3s, color 0.3s, border 0.3s, border-radius 0.3s;
    -o-transition: background-color 0.3s, color 0.3s, border 0.3s, border-radius 0.3s;
    transition: background-color 0.3s, color 0.3s, border 0.3s, border-radius 0.3s;
}

.kbs-modal-closed:hover {
    border-bottom: solid #ff0000 34px;
    border-radius: 0;
}

.kbs-modal-content {
    display: inline-block;
    width: 100%; height: 80px;
    padding: 10px;
    font-size: 14px;
    text-align: left;
}

.kbs-view {
    overflow: auto;
}

.kbs-modal-shield {
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0; bottom: 0;
    left: -3px; right: 0;
    display: none;
    cursor: pointer;
    -webkit-transition: background 0.3s;
    -moz-transition: background 0.3s;
    -o-transition: background 0.3s;
    transition: background 0.3s;
}

.kbs-modal-shield:hover {
    background-color: rgba(0, 0, 0, 0.0);
}

.kbs-modal.kbs-small {
    width: 350px; height: 200px;
    margin-left: -175px;
    margin-top: -100px;
}

.kbs-modal.kbs-view-screenshot {
    position: fixed;
    top: 100px; bottom: 100px;
    left: 100px; right: 100px;
    width: auto; height: auto;
    margin-left: 0;
    margin-top: 0;
}

.kbs-modal.kbs-view-object pre,
.kbs-modal.kbs-task-stats pre {
    max-height: 250px;
    overflow: scroll;
}

.kbs-modal.kbs-console-destruct {
    width: 400px; height: 200px;
    margin-top: -100px;
    margin-left: -200px;
    margin-right: -100px;
}

.kbs-console-destruct .kbs-modal-content {
    text-align: center;
}

.kbs-modal.kbs-task-search {
    width: 400px; height: 200px;
    margin-top: -80px;
    margin-left: -200px;
    margin-right: -100px;
}

.kbs-task-search .kbs-modal-content {
    text-align: center;
}

.kbs-modal.kbs-task-search .kbs-modal-content {
    height: auto;
}

.kbs-modal.kbs-task-search .kbs-input-field {
    -moz-appearance: textfield;
}

.kbs-modal.kbs-task-not-found {
    width: 350px;
    height: 175px;
    margin-top: -68px;
    margin-left: -175px;
}

.kbs-modal.kbs-task-not-found .kbs-modal-content {
    text-align: center;
}

.kbs-modal.kbs-user-config {
    width: 520px;
    height: 550px;
    margin-left: -260px;
    margin-top: -275px;
}

.kbs-modal.kbs-user-data pre {
    max-height: 250px;
    overflow-y: scroll;
}

.kbs-modal.kbs-task-filter {
    width: 600px;
    height: 700px;
    margin-left: -300px;
    margin-top: -350px;
}

.kbs-modal.kbs-task-stats {
    width: 600px; height: 350px;
    margin-top: -175px;
    margin-left: -300px;
    margin-right: -100px;
}

.kbs-modal.kbs-task-stats .search {
    margin-top: 70px;
}

.kbs-modal.kbs-task-stats .error {
    color: #cf5757;
}

.kbs-modal.kbs-task-stats .kbs-modal-content {
    text-align: center;
}

.kbs-modal.kbs-task-stats .kbs-field {
    min-height: auto;
}

.kbs-modal.kbs-task-stats pre {
    margin: 0;
    max-height: ;
}

.kbs-confirm,
.kbs-cancel {
    width: 100px; height: 30px;
    margin: 0 4px;
    border: solid transparent 0px;
    padding: 5px 15px;
    text-align: center;
    font-size: 14px;
    cursor: pointer;
}

.kbs-continue {
    position: relative;
    left: 50%;
    width: 150px;
    margin: 0 2px;
    margin-left: -75px;
    border: solid transparent 0px;
    padding: 5px 15px;
    text-align: center;
    font-size: 14px;
    cursor: pointer;
}

.kbs-confirm,
.kbs-cancel,
.kbs-continue {
    -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -moz-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -o-transition: background-color 0.3s, color 0.3s, border 0.3s;
    transition: background-color 0.3s, color 0.3s, border 0.3s;
}

.kbs-screenshot-wrap {
    background-color: #353535;
    background-image: url(http://subtlepatterns.com/patterns/black_lozenge.png);
    background-size: 30px;
    position: absolute;
    top: 40px; bottom: 0;
    left: 0; right: 0;
    text-align: center;
    overflow: hidden;
    cursor: grab;
}

.kbs-screenshot {
    position: relative;
    width: auto; height: auto;
    max-width: initial !important;
    max-height: initial !important;
    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.8);
    transform: scale(0.75);
}

/* gui console wrapper
------------------------------------------------------------------------------*/
.kbs-cons-box {
    position: fixed;
    top: 0; right: 0;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
    z-index: 2147483646;
    overflow: hidden;
    -webkit-transition: width 0.3s, height 0.3s 0.3s, border 0.3s;
    -moz-transition: width 0.3s, height 0.3s 0.3s, border 0.3s;
    -o-transition: width 0.3s, height 0.3s 0.3s, border 0.3s;
    transition: width 0.3s, height 0.3s 0.3s, border 0.3s;
}
/* ... */

